fix(ui): fix swap icon too big

--- a/src/ui/pages/NotificationDetails/components/ReceiveCredential/ReceiveCredential.scss
+++ b/src/ui/pages/NotificationDetails/components/ReceiveCredential/ReceiveCredential.scss
@@ -67,13 +67,13 @@
     }
 
     .request-swap-logo span {
-      width: 2.75rem;
-      height: 2.75rem;
+      width: 2.5rem;
+      height: 2.5rem;
       border-radius: 2.75rem;
 
       ion-icon {
-        width: 1.875rem;
-        height: 1.875rem;
+        width: 1.25rem;
+        height: 1.25rem;
         margin: 0 auto;
       }
     }
